2012 Oct 14 Sergey Satskiy <sergey.satskiy@gmail.com>

* Release 1.7
* Shift+Tab intercepted properly in the editor window in Windows based X
  Server. Issue #334
* Early logging on Windows based X Server could lead to crashes so some
  warnings were delayed.
* Setting the default encoding to 'utf-8' for codimension itself.
* Explicitly pass focus to the current editor when codimension is activated.


2012 Sep 17  Sergey Satskiy <sergey.satskiy@gmail.com>

* Release 1.6
* New feature: PythonTidy integration and diff viewers
* New Project button is removed from the main window toolbar
* New feature: copying a diagram to the clipboard (main menu and Ctrl+C)
* New feature: new file template support for the case when no new
  project is loaded. UI to create/edit/delete new file templates added.
* Editor settings are moved from the main toolbar button with menu to the
  introduced main menu 'Options'
* New feature: unused class/function/global variable analysis
* New feature: find occurences for classes/functions/global variables viewers
* Bug fix: incorrect file icons in the editing history
* Bug fix: incorrect file name in the editing history after save as
* Bug fix: impossible to save non-modified file when it disappeared from disk
* New feature: total number of matches is now shown in the search results
  header
* New feature: disassember for functions and classes in the function/class
  viewers
* New feature: profiling support: representing the results as a graphics
  diagram and as a table
* New feature: exporting profiling and imports diagrams in png format
* Improvement of import diagrams: performance; tooltips for modules;
  better text alignment; better recognition of the system modules
* Ctrl+' now highlight the current word, instead of Ctrl+N. Issue #323
* Ctrl+N now creates a new file, instead of Ctrl+T. Issue #323
* Ctrl+T is now not used for anything. Issue #323
* Bug fix: no more exception while building a completion list. Issue #321